tests/paczka1/fuzzy1/46985836.err
Error in line 28: 8507aHaSeDe A26 96,4
Error in line 32: ymlF2E A513 57,6
